[gd_scene load_steps=27 format=3 uid="uid://bco5uji2ajbom"]

[ext_resource type="Script" path="res://scripts/blogu.gd" id="1_2ua47"]
[ext_resource type="Texture2D" uid="uid://cyg1hwvshg3yd" path="res://characters/blogu/Blogu-1 3.png" id="1_k2ejf"]
[ext_resource type="Texture2D" uid="uid://b3dyc1t3ha03t" path="res://characters/blogu/Blogu-2 3.png" id="2_8cq0r"]
[ext_resource type="Texture2D" uid="uid://bkl1s6c2nj8yq" path="res://characters/blogu/Blogu_hurt_1.png" id="2_suhjr"]
[ext_resource type="Texture2D" uid="uid://b5dqgajj7iodj" path="res://characters/blogu/Blogu-3 3.png" id="3_03wks"]
[ext_resource type="Texture2D" uid="uid://b8tcbkaww6qo0" path="res://characters/blogu/Blogu_hurt_2.png" id="3_em4a6"]
[ext_resource type="Texture2D" uid="uid://gtemwrrnd6i0" path="res://characters/blogu/Blogu-4 3.png" id="4_304ov"]
[ext_resource type="Texture2D" uid="uid://blj3mkfoef6el" path="res://characters/blogu/Blogu_hurt_3.png" id="4_nr55r"]
[ext_resource type="Texture2D" uid="uid://cmy0yg0fmbfmx" path="res://characters/blogu/Blogu_hurt_left_1.png" id="5_6utnb"]
[ext_resource type="Texture2D" uid="uid://ds5tdjf3l48ra" path="res://characters/blogu/Blogu-5 3.png" id="5_ll5a7"]
[ext_resource type="Texture2D" uid="uid://ryj5g2mrmkij" path="res://characters/blogu/Blogu_hurt_left_2.png" id="6_imohm"]
[ext_resource type="Texture2D" uid="uid://bnyqs5a7at2l" path="res://characters/potion_battler_shadow.png" id="6_q0j41"]
[ext_resource type="Texture2D" uid="uid://cspwb5nb1thbj" path="res://characters/blogu/Blogu_hurt_left_3.png" id="7_cxxuf"]
[ext_resource type="Script" path="res://blogu_animations.gd" id="10_k1vuh"]
[ext_resource type="Texture2D" uid="uid://cad7nle35n4ev" path="res://characters/blogu/Blogu_walk_left_1.png" id="13_2j33k"]
[ext_resource type="PackedScene" uid="uid://bvg4ev44bsgq1" path="res://hit_box.tscn" id="13_2ywce"]
[ext_resource type="PackedScene" uid="uid://bbs76f632wggo" path="res://flock_view.tscn" id="14_i60g6"]
[ext_resource type="PackedScene" uid="uid://dxcfotaju0lnv" path="res://hurt_box.tscn" id="14_ksyos"]
[ext_resource type="Texture2D" uid="uid://chcv6emvu2rn" path="res://characters/blogu/Blogu_walk_left_2.png" id="14_pq445"]
[ext_resource type="Texture2D" uid="uid://catsya5w0nmn0" path="res://characters/blogu/Blogu_walk_left_3.png" id="15_kitun"]
[ext_resource type="Texture2D" uid="uid://0mqt3ye62yf7" path="res://characters/blogu/Blogu_walk_left_4.png" id="16_iaywi"]
[ext_resource type="Texture2D" uid="uid://bg2xsyiik1e08" path="res://characters/blogu/Blogu_walk_left_5.png" id="17_67gc5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_phlg3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_suhjr")
}, {
"duration": 1.0,
"texture": ExtResource("3_em4a6")
}, {
"duration": 1.0,
"texture": ExtResource("4_nr55r")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_6utnb")
}, {
"duration": 1.0,
"texture": ExtResource("6_imohm")
}, {
"duration": 1.0,
"texture": ExtResource("7_cxxuf")
}],
"loop": true,
"name": &"hurt_L",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k2ejf")
}, {
"duration": 1.0,
"texture": ExtResource("2_8cq0r")
}, {
"duration": 1.0,
"texture": ExtResource("3_03wks")
}, {
"duration": 1.0,
"texture": ExtResource("4_304ov")
}, {
"duration": 1.0,
"texture": ExtResource("5_ll5a7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_2j33k")
}, {
"duration": 1.0,
"texture": ExtResource("14_pq445")
}, {
"duration": 1.0,
"texture": ExtResource("15_kitun")
}, {
"duration": 1.0,
"texture": ExtResource("16_iaywi")
}, {
"duration": 1.0,
"texture": ExtResource("17_67gc5")
}],
"loop": true,
"name": &"walk_L",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8rii1"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4nown"]
radius = 45.3982

[sub_resource type="CircleShape2D" id="CircleShape2D_vjpw5"]
radius = 60.0

[node name="Blogu" type="CharacterBody2D" groups=["mob"]]
collision_layer = 4
collision_mask = 4
platform_floor_layers = 4294967040
script = ExtResource("1_2ua47")

[node name="BloguAnimation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_phlg3")
animation = &"walk_L"
script = ExtResource("10_k1vuh")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.134062, 0.349557, 0.349592, 0.768627)
show_behind_parent = true
position = Vector2(0, 52)
scale = Vector2(0.170313, -0.207483)
texture = ExtResource("6_q0j41")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 25)
shape = SubResource("CircleShape2D_8rii1")

[node name="HitBox" parent="." instance=ExtResource("13_2ywce")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_4nown")

[node name="FlockView" parent="." groups=["enemy"] instance=ExtResource("14_i60g6")]

[node name="HurtBox" parent="." instance=ExtResource("14_ksyos")]
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_vjpw5")

[node name="FlockView2" parent="." instance=ExtResource("14_i60g6")]

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HitBox"]
[editable path="FlockView"]
[editable path="HurtBox"]
[editable path="FlockView2"]
